style.css
.logo-cont img {
    width: 42px;
    height: 42px;
}

.header {
    margin: 14px auto;
    max-width: 380px;
}

.join h3 {
    font-size: 14px;
}

.main-text {
    font-size: 30px;
    font-weight: bold;
    color: black;
    line-height: 1.3125;
}

.sign-bn {
    width: 100%;
    background-color: #3ba1f2;
    font-weight: bold;
    font-size: 17px;
}

.log-in {
    width: 100%;
    font-weight: bold;
    font-size: 17px;
    background-color: white;
    border: 1px solid #3ba1f2;
}

.row-2 {
    background-color: #71c9f8;
    position: relative;
    overflow: hidden;
    padding: 14px;
}

.bird-bg {
    position: relative;
    z-index: 1;
}

.twt {
    fill: #1da1f2;
    position: absolute;
    top: -12vh;
    right: -13vh;
    height: 60vh;
}

.headsup {
    position: relative;
    z-index: 100;
    padding: 14px 0;
}

.s-fll {
    display: flex;
    align-items: flex-start;
    font-size: 18px;
    line-height: 28px;
    margin-bottom: 40px;
}

.mnon {
    margin-bottom: 0;
}

/* second sign in area */
.cta2 {
    padding: 30px 15px;
    max-width: 380px;
}

.sgn,
.lgn {
    width: 45%;
    font-size: 15px;
    padding: 0.6rem;
}

.sach,
.ppl,
.chat {
    fill: white;
    width: 24px;
}

.foot-wrap {
    background-color: #fff;
}

.wrap {
    flex-wrap: wrap;
    line-height: 1.3125;
}

.wrap li {
    padding: 0.4rem;
}

.wrap a {
    font-size: 12px;
    color: #657786
}

@media screen and (min-width: 425px) {
    .headsup {
        max-width: 350px;
    }
}

@media screen and (min-width: 1024px) {
    .lg-main {
        height: 90vh;
    }

    .ryt-con {
        flex-wrap: wrap;
    }

    .cta {
        margin: 0 auto;
    }

    .form {
        position: relative;
        top: 15px;
        padding: 0 15px;
    }

    .dsg {
        flex-direction: column;
        border-bottom: 2px solid #657786;
        background: #f5f8fa;
        padding: 0 10px;
        height: 55px;
    }

    .pword {
        padding-left: 20px;
        padding-right: 20px;
    }

    .span-name {
        align-self: flex-start;
    }

    .span-name span {
        color: #657786;
        font-size: 13px;
    }

    .inp {
        background: #f5f8fa;
        font: 400 13px Arial;
        outline: none;
        padding-bottom: 5px;
        padding-top: 2px;
    }

    .p-link {
        font-size: 13px;
    }

    .bttn {
        border-radius: 1.5rem;
        width: 83px;
        background: none;
        border: 1px solid #3ba1f2;
        color: #3ba1f2;
        padding: 0;
        min-height: 39px;
        height: 0;
        margin: auto 0;
    }
    
    .twt {
        fill: #1da1f2;
        position: absolute;
        top: -62vh;
        right: -52vh;
        height: 160vh;
    }

    .row-2 {
        justify-content: center;
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }

    .headsup {
        align-self: center;
    }

    .wrap a {
        font-size: 13px;
    }

    
}

